[package]
name = "netxbuilder"
version = "1.5.1"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"
repository = "https://github.com/luyikk/rust_netx"
documentation = "https://docs.rs/netxbuilder"
description = "netx builder assembly."
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc_macro_roids = "0.7"
