[package]
name = "netxclient"
version = "2.1.0"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
repository = "https://github.com/luyikk/rust_netx"
documentation = "https://docs.rs/netxclient"
description = "netx client assembly."
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tcpclient"]
use_openssl = ["openssl", "openssl-sys", "tokio-openssl"]
use_rustls = ["tokio-rustls"]
dserde = ["data-rw/data"]
jserde = ["data-rw/json"]
backtrace = ["anyhow/backtrace"]

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
tcpclient = { version = "2.0", optional = true }
tcp-channel-client = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"
aqueue = "1.3"
async-trait = "0.1"
data-rw = "1.6"
netxbuilder = "2.0"
anyhow = { version = "1" }
once_cell = "1.10"
cfg-if = "1.0"
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
tokio-openssl = { version = "0.6", optional = true }
tokio-rustls = { version = "0.26", optional = true }
oneshot = { version = "0.1", default-features = false, features = ["async"] }

[dev-dependencies]
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
structopt = "0.3"
rustls-pemfile = { version = "2" }