[package]
name = "test_server"
version = "0.1.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.8.2"
netxserver={path="../netx_server"}