[package]
name = "msgclient"
version = "0.1.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log="0.4"
env_logger = "0.9.0"
netxclient={path="../../../netx_client"}
serde_json = "1.0.61"
chrono="0.4"
packer={path="../packer"}
anyhow="1.0"
async-trait="0.1"