[package]
name = "msgclient_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
netxclient = { path = "../../../netx_client" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0.61"
chrono = "0.4"
packer = { path = "../packer" }
anyhow = "1.0"
async-trait = "0.1"
cursive = { version = "0.15", default-features = false, features = ["pancurses-backend"] }
once_cell = "1.19"
oneshot = "0.1"