[package]
name = "msgserver"
version = "0.1.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
netxserver="0.1.6"
log="0.4"
env_logger = "0.8.2"
serde_json = "1.0.61"
packer={path="../packer"}
lazy_static = "1.4.0"
