[package]
name = "msgserver"
version = "0.1.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
netxserver = { path = "../../../netx_server" }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0.61"
packer = { path = "../packer" }
lazy_static = "1.4.0"
anyhow = "1.0"
async-trait = "0.1"