[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use_openssl"]
use_openssl = ["netxclient/use_openssl"]
use_rustls = ["netxclient/use_rustls"]

[dependencies]
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
async-trait = "0.1"
openssl = { version = "0.10" }
openssl-sys = { version = "0.9" }
tokio = { version = "1", features = ["full"] }
netxclient = { path = "../../../netx_client", version = "1.7" }
rustls-pemfile = { version = "1" }
cfg-if = "1"