[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# use openssl
use_openssl = ["netxserver/use_openssl"]
# use rustls
use_rustls = ["netxserver/use_rustls"]

[dependencies]
tokio = { version = "1", features = ["full"] }
netxserver = { path = "../../../netx_server"}
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
async-trait = "0.1"

openssl = { version = "0.10" }
openssl-sys = { version = "0.9" }

tokio-rustls = { version = "0.26" }
rustls-pemfile = { version = "2" }
